--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     }
+.card{
+    height: 300px;
+    width: 200px;
+    background-color: blue;
+}
+.search button{
+    width: 40px;
+    height: 40px;
+    background-color: blue;
+}
