--- a/style.css
+++ b/style.css
@@ -3,13 +3,41 @@
     padding: 0;
     box-sizing: border-box;
     }
+
 .card{
-    height: 300px;
-    width: 200px;
+    margin: 100px auto;
+    padding: 30px 20px;
+    height: 500px;
+    width: 400px;
     background-color: blue;
 }
-.search button{
+.search{
+    background-color: aliceblue;
+    width: 350px;
+    height:50px ;
+    padding: 2px 10px;
+    border: 1px solid blue;
+    border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+.search input{
+    border: none;
+    margin: 2px 5px;
+    outline: none;
+    width: 250px;
+    
+}
+.search button {
     width: 40px;
     height: 40px;
-    background-color: blue;
+    border: 2px solid aliceblue;
+    padding: 10px;
+    border-radius: 25px;
+    cursor: pointer;
+    
 }
+.search button img{
+width: 20px;
+height: 20px;
+} 
