--- a/style.css
+++ b/style.css
@@ -9,19 +9,27 @@
     padding: 30px 20px;
     height: 500px;
     width: 400px;
+    
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
     background-color: blue;
+    border-radius: 30px;
+    -webkit-box-shadow: 10px -3px 22px -1px rgba(0,0,0,0.53);
+-moz-box-shadow: 10px -3px 22px -1px rgba(0,0,0,0.53);
+box-shadow: 10px -3px 22px -1px rgba(0,0,0,0.53);
 }
 .search{
     background-color: aliceblue;
     width: 350px;
     height:50px ;
-    padding: 2px 10px;
-    border: 1px solid blue;
+    padding: 2px 3px 2px 20px;
+    border: 1px solid rgb(134, 189, 226);
     border-radius: 30px;
     display: flex;
     justify-content: space-between;
 }
 .search input{
+    background-color: aliceblue;
     border: none;
     margin: 2px 5px;
     outline: none;
@@ -29,11 +37,12 @@
     
 }
 .search button {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
+    
     border: 2px solid aliceblue;
     padding: 10px;
-    border-radius: 25px;
+    border-radius: 30px;
     cursor: pointer;
     
 }
